fix viewport scroll on mobile

--- a/style.css
+++ b/style.css
@@ -66,9 +66,6 @@ svg{
 #to-bottom{
 	position: absolute;
 	bottom: 4%;
-	width: 24px;
-	margin-left: auto;
-	margin-right: auto;
 	left: 0;
 	right: 0;
 	text-align: center;
